--- a/estilo.css
+++ b/estilo.css
@@ -20,7 +20,17 @@
     /* justify-content: flex-start; lo alinea a la esquierda*/
     /* justify-content: flex-end; lo alinea a la derecha*/
     /* justify-content: space-between; el alinea espacio entre los ellos*/
-    justify-content: space-around;
+    /* justify-content: space-around; alenia espacia entre ellos y el contenedor de los elemento*/
+    
+    /* Estilo alin item */
+    /* align-items: flex-start; los coloca en la parte superior*/
+    /* align-items: flex-end; los coloca en la parte inferior */
+    /* align-items: center; los va color en linea sin importar si el tamaño es diferente */
+    /* align-items: stretch; hace que la altura sea del tamaño dispomible por el */
+    /* align-items: baseline; margin-top: 20px; align-items: stretch hace que la misma linea sea igual para todos*/
+    
+    /* Estilo alin content */
+
 
 
 
@@ -33,6 +43,8 @@
     color: rgb(0, 0, 0);
     background-color: rgb(236, 230, 176);
     border: 1px solid white;
+    height: 100px;
+    padding: 15px;
     /*  estilos flex   */
 }
 
@@ -42,7 +54,10 @@
     color: rgb(0, 0, 0);
     background-color: rgb(233, 164, 212);
     border: 1px solid white;
+    height: 70px;
+    padding: 15px;
     /*  estilos flex   */
+    
 }
 
 .item3 {
@@ -51,6 +66,8 @@
     color: rgb(0, 0, 0);
     background-color: rgb(166, 143, 219);
     border: 1px solid white;
+    height: 200px;
+    padding: 15px;
     /*  estilos flex   */
 }
 
@@ -60,5 +77,7 @@
     color: rgb(11, 9, 8);
     background-color: rgb(132, 167, 222);
     border: 1px solid white;
+    height: 150px;
+    padding: 15px;
     /*  estilos flex   */
 }
